Added FX support